<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEBEB"
    tools:context=".ServicesAD">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-26dp"
        tools:layout_editor_absoluteY="-16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Header Banner -->
            <LinearLayout
                android:id="@+id/headerBanner"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/Blue"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="89dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="24dp">

                    <TextView
                        android:id="@+id/sDetailTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/anton"
                        android:text="@string/detail_title"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/arrowBack"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="24dp"
                        android:contentDescription="@string/back_arrow"
                        android:src="@drawable/back_arrow"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/sDetailImage"
                    android:layout_marginTop="10dp"
                    android:layout_width="400dp"
                    android:layout_height="220dp"
                    android:background="@drawable/rounded_bg"
                    android:padding="8dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/content_image"/>

                <TextView
                    android:id="@+id/sDetailDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/poppins_light"
                    android:padding="20dp"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/contactButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/btn_background"
                    style="@style/Widget.AppCompat.Button"
                    android:textColor="@color/white"
                    android:text="@string/contact_us"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>