<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEBEB"
    tools:context=".AboutUsDA">


    <!-- ScrollView Section -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-26dp"
        tools:layout_editor_absoluteY="-16dp">

        <!-- Main Content Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Header Banner -->
            <LinearLayout
                android:id="@+id/headerBanner"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/Blue"
                android:orientation="vertical">

                <!-- Header Content Layout -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="89dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="24dp">

                    <!-- Title TextView -->
                    <TextView
                        android:id="@+id/detailTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/anton"
                        android:text="@string/detail_title"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <!-- Back Arrow ImageView -->
                    <ImageView
                        android:id="@+id/arrowBack"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="24dp"
                        android:contentDescription="@string/back_arrow"
                        android:src="@drawable/back_arrow"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <!-- Detail Image and Description Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Detail Image -->
                <ImageView
                    android:id="@+id/detailImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_bg"
                    android:contentDescription="@string/content_image"
                    android:padding="8dp"
                    android:scaleType="centerCrop" />

                <!-- Detail Description TextView -->
                <TextView
                    android:id="@+id/detailDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/poppins_light"
                    android:padding="20dp"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <!-- Contact Us Button -->
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/contactButton"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/btn_background"
                    android:text="@string/contact_us"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>