<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- CardView to display a card with specific attributes -->
    <androidx.cardview.widget.CardView
        android:id="@+id/sRecCard"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="16dp"
        app:cardUseCompatPadding="true">

        <!-- Main LinearLayout for the card content -->
        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/about_us_border_top"
            android:weightSum="5.5">

            <!-- ImageView for displaying an image, taking 4/5 of the total height -->
            <ImageView
                android:id="@+id/sRecImage"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:scaleType="centerCrop"
                android:contentDescription="@string/about_us_images"/>

            <!-- Nested LinearLayout for the title, description, and language -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:weightSum="2"
                android:layout_weight="1.5"
                android:background="@drawable/about_us_card_border"
                android:baselineAligned="false">

                <!-- LinearLayout for title and description, taking 1.3/2 of the total width -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.3  "
                    android:padding="10dp"
                    android:orientation="vertical">

                    <!-- TextView for the title -->
                    <TextView
                        android:id="@+id/sRecTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/bangers"
                        android:maxLines="1"
                        android:text="@string/title"
                        android:textColor="@color/Blue"
                        android:textSize="20sp" />

                    <!-- TextView for the description -->
                    <TextView
                        android:id="@+id/sRecDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bangers"
                        android:text="@string/desc"
                        android:textSize="18sp"
                        android:maxLines="0"/>

                </LinearLayout>

                <!-- LinearLayout for the language, taking 0.7/2 of the total width -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:gravity="center">

                    <!-- TextView for the language -->
                    <TextView
                        android:id="@+id/sRecLang"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:text="@string/description"
                        android:textColor="@color/Blue"
                        android:textSize="18sp"
                        android:textAlignment="center"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>