<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEBEB"
    tools:context=".VitaminsSupplements">

    <!-- Header Banner Section -->
    <LinearLayout
        android:id="@+id/headerBanner"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/Blue"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <!-- ConstraintLayout for arranging views within the banner -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="24dp">

            <!-- ImageView for a back arrow -->
            <ImageView
                android:id="@+id/arrowBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/back_arrow"
                android:src="@drawable/back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- TextView for displaying the header text -->
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/anton"
                android:text="@string/doctor_and_staffs"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <!-- ScrollView to allow scrolling if the content is larger than the screen -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerBanner"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/headerBanner">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <!-- Content Section -->
                <LinearLayout
                    android:id="@+id/cardImageSlider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent">

                    <!-- Title TextView for Specialist -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/specialist"
                        android:textAlignment="center"
                        android:textColor="#26273A"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <!-- CardView for Image Slider -->
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="16dp"
                        app:cardBackgroundColor="#EAEAEA"
                        app:cardCornerRadius="15dp">

                        <!-- Image Slider using a custom library -->
                        <com.denzcoskun.imageslider.ImageSlider
                            android:id="@+id/imageSlider"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            app:iss_auto_cycle="true"
                            app:iss_corner_radius="20"
                            app:iss_delay="2000"
                            app:iss_period="2000"
                            app:iss_title_background="@drawable/gradient" />

                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <!-- LinearLayout for Staffs and Availability -->
                <LinearLayout
                    android:id="@+id/staffRole"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/cardImageSlider">

                    <!-- TextView for Staffs -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Staffs"
                        android:textColor="#26273A"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <!-- TextView for Availability -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Available"
                        android:layout_marginEnd="15dp"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/Blue"
                        android:textStyle="bold" />

                </LinearLayout>

                <!-- RecyclerView for displaying staff information -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/staffRole">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingBottom="30dp"/>


                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>